# smart_pc

./: .gitignore  Makefile.am  README  configure.ac
data/: commands.data  res.trn  xor.data  xor_float.net
docs/: Doxyfile
docs/html/: AnnTrain_8h_source.html  CommandProcess_8h_source.html  HandDetector_8h_source.html  annotated.html  classcAnnTrain-members.html  classcAnnTrain.html  classcCommandProcess-members.html  classcCommandProcess.html  classcHandDetector-members.html  classcHandDetector.html  classes.html  files.html  functions.html  functions_func.html  index.html
docs/html/search/: all_63.html  all_65.html  all_67.html  all_69.html  classes_63.html  functions_61.html  functions_63.html  functions_67.html  functions_72.html  functions_73.html  functions_74.html  functions_76.html  functions_7e.html  search.js
docs/latex/: annotated.tex  classcAnnTrain.tex  classcCommandProcess.tex  classcHandDetector.tex  doxygen.sty  refman.tex
src/: AnnTrain.cpp  AnnTrain.h  CommandProcess.cpp  CommandProcess.h  HandDetector.cpp  HandDetector.h  Makefile.am  main.cpp
test/: Makefile.am  test.cpp
